feat: cometic changes

--- a/express-sqlite3-sequelize/views/homepage.ejs
+++ b/express-sqlite3-sequelize/views/homepage.ejs
@@ -2,7 +2,14 @@
     </head>
     <body>
         <%- include('includes/navbar.ejs') %>
-        <%- include('shorturl.ejs') %>
+        <div id="main" class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h1 class="text-center">URL Shortner</h1>
+                </div>
+            </div>
+            <%- include('shorturl.ejs') %>
+        </div>
         <%- include('includes/scripts.ejs') %>
 
             const Constants = {
