--- a/express-sqlite3-sequelize/views/includes/header.ejs
+++ b/express-sqlite3-sequelize/views/includes/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
       <title>
-        URL Shortner
+        <%= pageTitle %>
       </title>
       <!-- Bootstrap CSS -->
         <!-- Latest compiled and minified CSS -->
